# quad_ws

./: .gitignore
src/controllers/: CMakeLists.txt  package.xml
src/controllers/include/: Common.h  Debug.h  Dynamics.h  Gait.h  Swing.h  Utils.h
src/controllers/src/: Dynamics.cpp  Estimate.cpp  Utils.cpp  joy_key_node.cpp  main.cpp
src/controllers/test/: dynamics_test.cpp  test_gait.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Joy_control.msg  Motor_control.msg  Motor_state.msg  Sim_info.msg  comment.txt
src/robot_controllers/: CMakeLists.txt  package.xml
src/robot_controllers/include/: Common.h  Debug.h  Dynamics.h  Estimate.h  Gait.h  Manager.h  Mpc.h  Rviz_vision.h  Swing.h  Utils.h
src/robot_controllers/src/: Debug.cpp  Dynamics.cpp  Estimate.cpp  Gait.cpp  Manager.cpp  Mpc.cpp  Rviz_vision.cpp  Swing.cpp  Utils.cpp  joy_key_node.cpp  main.cpp
src/robot_controllers/test/: test_dynamics.cpp  test_estimate.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: motor.yaml  rviz_config.rviz
src/robot_description/launch/: rviz_display_urdf.launch  rviz_display_xacro.launch
src/robot_description/robot/meshes/: base_link.STL  leg1_link1.STL  leg1_link2.STL  leg1_link3.STL  leg2_link1.STL  leg2_link2.STL  leg2_link3.STL  leg3_link1.STL  leg3_link2.STL  leg3_link3.STL  leg3_link4.STL  leg4_link1.STL  leg4_link2.STL  leg4_link3.STL  leg4_link4.STL
src/robot_description/robot/urdf/: Combination.xacro  leg.xacro  robot.urdf  robot.xacro  robot_param.xacro  sensor_gazebo.xacro
src/robot_description/robot/xml/: robot.xml  robot_scene.xml  test.xml
src/robot_description/worlds/: earth.world  stairs.world
src/sim_bridge/: CMakeLists.txt  package.xml
src/sim_bridge/include/: MJ_interface.h  UI_interface.h
src/sim_bridge/launch/: sim_gazebo.launch  sim_mujoco.launch  sim_rviz.launch
src/sim_bridge/src/: MJ_interface.cpp  UI_interface.cpp  sim_gazebo.cpp  sim_mujoco.cpp
