<?xml version="1.0"?>
<package format="2">
  <name>sim_bridge</name>
  <version>0.0.0</version>
  <description>The sim_bridge package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="coco@todo.todo">coco</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>controller_manager</build_depend>  <!--gazebo仿真-->
  <build_depend>joint_state_controller</build_depend> <!--gazebo仿真-->
  <build_depend>robot_state_publisher</build_depend> <!--gazebo仿真-->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend> <!--gazebo仿真-->
  <build_export_depend>joint_state_controller</build_export_depend> <!--gazebo仿真-->
  <build_export_depend>robot_state_publisher</build_export_depend> <!--gazebo仿真-->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend> <!--gazebo仿真-->
  <exec_depend>joint_state_controller</exec_depend> <!--gazebo仿真-->
  <exec_depend>robot_state_publisher</exec_depend> <!--gazebo仿真-->

  <export>

  </export>
</package>
